# neural_recording_motion_correction

./: CMakeLists.txt  README.md
cmake_modules/: FindOPENCV.cmake  FindOpenCV.cmake
src/: globals.cpp  globals.h  main.cpp  motion_stabilizer.hpp  stablizer.cpp  stablizer.h  videoio.cpp  videoio.h  videoio.hpp
